# dftworks

./: AGENTS.md  BUILD.md  Cargo.toml  Dockerfile  OPTIMIZATION_PLAN.md  OPTIMIZATION_TODO.md  PROPERTY_EXPANSION_TODO.md  README.md  WORKSPACE_GUIDE.md  docker-compose.yaml  justfile
.cursor/plans/: dft_python_documentation_706838c9.plan.md
.cursor/rules/: dft-domain-specific.mdc  numerical-stability.mdc  performance-vectorization.mdc  project-overview.mdc  software-engineering.mdc
.github/workflows/: ci.yml  core-tests.yml
atompsp/: Cargo.toml
atompsp/src/: lib.rs  upf.rs  upffr.rs
control/: Cargo.toml
control/src/: lib.rs
crystal/: Cargo.toml  README.md  justfile
crystal/src/: in.crystal  lib.rs  tests.rs
density/: Cargo.toml
density/src/: lib.rs  ncl.rs  nonspin.rs  spin.rs
dfttypes/: Cargo.toml
dfttypes/src/: checkpoint_repo.rs  lib.rs
docs/architecture/: checkpoint_abstraction.md  scf_pipeline.md
docs/examples/: basic_scf_run.md
dwconsts/: Cargo.toml
dwconsts/src/: lib.rs
dwfft3d/: Cargo.toml  build.rs
dwfft3d/src/: fftw.rs  fftw_cpu.rs  fftw_gpu.rs  lib.rs
dwmatrix/: Cargo.toml  build.rs
dwmatrix/src/: dwmatrix_c64.rs  dwmatrix_f64.rs  lib.rs
dwmpi/: Cargo.toml
dwmpi/src/: lib.rs
eigensolver/: Cargo.toml  rustfmt.toml
eigensolver/src/: lib.rs  pcg.rs
energy/: Cargo.toml
energy/src/: lib.rs
ewald/: Cargo.toml
ewald/src/: lib.rs
fermilevel/: Cargo.toml
fermilevel/src/: lib.rs  ncl.rs  nonspin.rs  spin.rs
fftgrid/: Cargo.toml
fftgrid/src/: lib.rs
fhkl/: Cargo.toml
fhkl/src/: lib.rs
fifo/: Cargo.toml
fifo/src/: lib.rs
force/: Cargo.toml
force/src/: lib.rs  symmetry.rs
geom/: Cargo.toml
geom/src/: bfgs.rs  diis.rs  lib.rs
gvector/: Cargo.toml
gvector/src/: lib.rs
hpsi/: Cargo.toml
hpsi/src/: lib.rs
integral/: Cargo.toml
integral/src/: lib.rs
kgylm/: Cargo.toml
kgylm/src/: lib.rs
kpts/: Cargo.toml
kpts/src/: lib.rs  line.rs  mesh.rs
kpts_distribution/: Cargo.toml
kpts_distribution/src/: lib.rs
kscf/: Cargo.toml
kscf/src/: hubbard.rs  hybrid.rs  lib.rs  subspace.rs
lapack_sys/: Cargo.toml
lapack_sys/src/: lib.rs
lattice/: Cargo.toml
lattice/src/: lib.rs
linalg/: Cargo.toml
linalg/src/: lib.rs
magmom/: Cargo.toml
magmom/src/: in.magmom  lib.rs
matrix/: Cargo.toml  build.rs
matrix/src/: lib.rs  matrix_c64.rs  matrix_f64.rs
mixing/: Cargo.toml
mixing/src/: broyden.rs  lib.rs  pulay.rs
mpi_sys/: Cargo.toml  build.rs
mpi_sys/src/: lib.rs
ndarray/: Cargo.toml
ndarray/src/: array2.rs  array3_c64.rs  lib.rs
nlcc/: Cargo.toml
nlcc/src/: lib.rs
optimization/: Cargo.toml
optimization/src/: diis.rs  lib.rs
property/: Cargo.toml
property/src/: lib.rs
pspot/: Cargo.toml
pspot/src/: lib.rs
pw/: Cargo.toml  build.rs
pw/src/: main.rs  provenance.rs  restart.rs  runtime_display.rs
pw/src/orchestration/: bootstrap.rs  construction.rs  electronic.rs  execution.rs  mod.rs  outputs.rs
pwbasis/: Cargo.toml
pwbasis/src/: lib.rs
pwdensity/: Cargo.toml
pwdensity/src/: lib.rs
python_dft/: ALGORITHMS.md  README.md
python_dft/src/: __init__.py  constants.py  crystal.py  density.py  eigensolver.py  ewald.py  example.py  gvector.py  hamiltonian.py  hartree.py  kpoints.py  lattice.py  mixing.py  pseudopotential.py  pwbasis.py  scf.py  smearing.py  total_energy.py  xc.py
rgtransform/: Cargo.toml
rgtransform/src/: lib.rs
scf/: Cargo.toml
scf/src/: engine.rs  hartree.rs  hubbard.rs  lib.rs  ncl.rs  nonspin.rs  spin.rs  utils.rs
scf/src/utils/: diagnostics.rs  energy.rs  mixing.rs  mod.rs  potential.rs  symmetry_projection.rs
scripts/: run_hse06_regression.sh  run_hubbard_u_regression.sh  run_memory_estimator_smoke.sh  run_phase12_regression.sh  run_spin_mpi_parity.sh  run_workspace_allocation_trace.sh
skills/dftworks-regression-testing/: SKILL.md
skills/dftworks-regression-testing/agents/: openai.yaml
skills/dftworks-regression-testing/references/: execution-notes.md  regression-matrix.md
skills/dftworks-runtime-hardening/: SKILL.md
skills/dftworks-runtime-hardening/agents/: openai.yaml
skills/dftworks-runtime-hardening/references/: runtime-hardening.md  validation.md
skills/dftworks-runtime-hardening/scripts/: validate_runtime_changes.sh
skills/dftworks-runtime-review/: SKILL.md
skills/dftworks-runtime-review/agents/: openai.yaml
skills/dftworks-runtime-review/references/: review-checklist.md
smearing/: Cargo.toml
smearing/src/: fd.rs  gs.rs  lib.rs  mp1.rs  mp2.rs  mv.rs
special/: Cargo.toml
special/src/: lib.rs
stress/: Cargo.toml
stress/src/: lib.rs  symmetry.rs
symmetry/: Cargo.toml  SYMMETRY_DETECTION_WORKFLOW.md  build.rs
symmetry/src/: lib.rs  spglib.rs  spglib_sys.rs
symops/: Cargo.toml
symops/src/: classify.rs  detect.rs  lib.rs
test_example/si-oncv/bands/: in.ctrl  in.kline  in.kmesh  in.spin
test_example/si-oncv/hse06-gamma/: in.ctrl  in.kmesh
test_example/si-oncv/regression/: phase12_parity_report.md  phase12_reference.tsv
test_example/si-oncv/relax/: in.crystal  in.ctrl  in.magmom  out.relax
test_example/si-oncv/scf/: in.ctrl  in.kmesh  out.scf  out.scf.rho.hdf5  out.wfc.k.0.hdf5  out.wfc.k.1.hdf5  out.wfc.k.2.hdf5  (+5 more)
test_mpi/: Cargo.toml
test_mpi/src/: main.rs
tests/: integration_test.rs
types/: Cargo.toml
types/src/: lib.rs  matrix.rs  matrix_c64.rs  matrix_codec.rs  matrix_ext.rs  matrix_f64.rs
utility/: Cargo.toml
utility/src/: lib.rs
vdw/: Cargo.toml
vdw/src/: d3_params.rs  lib.rs
vector3/: Cargo.toml  README.md  justfile
vector3/src/: lib.rs  tests.rs  vector3_f64.rs  vector3_i32.rs
vloc/: Cargo.toml
vloc/src/: lib.rs
vnl/: Cargo.toml
vnl/src/: lib.rs
wannier90/: Cargo.toml
wannier90/src/: amn.rs  channel.rs  eig.rs  lib.rs  mesh.rs  mmn.rs  nnkp.rs  projected.rs  types.rs  win.rs
workflow/: Cargo.toml
workflow/src/: main.rs
xc/: Cargo.toml  DESIGN_REVIEW.md  IMPLEMENTATION_SUMMARY.md
xc/src/: driver.rs  error.rs  families.rs  functional.rs  ldapz.rs  lib.rs  lsdapz.rs  pbe.rs  traits.rs
xc/tests/: new_driver_test.rs
(+40 files in other folders)
