[profile.release]
debug = true
lto = true
rpath = false
incremental = true
opt-level = 3
codegen-units = 6

[workspace]

members = [
	"types",
	"dwconsts",
	"integral",
	"fifo",
	"vector3",
 	"lapack_sys",
	"matrix",
	"ndarray",
	"lattice",
	"utility",
	"gvector",
	"atompsp",
	"crystal",
	"dfttypes",
	"special",
	"fftgrid",
	"pwbasis",
	"dwfft3d",
	"smearing",
	"rgtransform",
	"ewald",
	"linalg",
	"optimization",
	"mixing",
	"fhkl",
	"kgylm",
	"vnl",
	"vloc",
	"eigensolver",
	"hpsi",
	"kscf",
	"kpts"
]

