[package]
name = "atompsp"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { path = "../ndarray" }
utility = { path = "../utility" }
dwconsts = { path = "../dwconsts" }
matrix = { path = "../matrix" }
integral = { path = "../integral" }
regex = "*"
xml-rs = "*"
