[package]
name = "dfttypes"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
matrix = { path = "../matrix" }
ndarray = { path = "../ndarray" }
kscf = { path = "../kscf" }
pwbasis = { path = "../pwbasis" }
lattice = { path = "../lattice" }
enum-as-inner = "*"
hdf5 = "0.8.1"
