[package]
name = "eigensolver"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
matrix = { path = "../matrix" }
dwconsts = { path = "../dwconsts" }
linalg = { path = "../linalg" }
utility = { path = "../utility" }
num-traits = "*"
control = { path = "../control" }