[package]
name = "ewald"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
utility = { path = "../utility" }
crystal = { path = "../crystal" }
dwconsts = { path = "../dwconsts" }
gvector = { path = "../gvector" }
matrix = { path = "../matrix" }
pwdensity = { path = "../pwdensity" }
special = { path = "../special" }
vector3 = { path = "../vector3" }
num-traits = "*"