[package]
name = "fhkl"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwconsts = { path = "../dwconsts" }
types = { path = "../types" }
vector3 = { path = "../vector3" }
num-traits = "*"
utility  = { path = "../utility" }