[package]
name = "kpts"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector3 = { path = "../vector3" }
crystal = { path = "../crystal" }
lattice = { path = "../lattice" }
symmetry = { path = "../symmetry" }
