[package]
name = "lattice"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix = { path = "../matrix" }
vector3 = { path = "../vector3" }
itertools = "*"
