[package]
name = "linalg"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
matrix = { path = "../matrix" }
lapack_sys = { path = "../lapack_sys" }