[package]
name = "matrix"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwconsts = { path = "../dwconsts" }
types = { path = "../types" }
lapack_sys = { path = "../lapack_sys" }
itertools = "*"
num-traits = "*"
hdf5 = "0.8.1"
