[package]
name = "matrix"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwconsts = { path = "../dwconsts" }
types = { path = "../types" }
itertools = "*"
num-traits = "*"
hdf5 = { package = "hdf5-metno", version = "0.9" }
nalgebra = "0.32.6"
