[package]
name = "ndarray"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
dwconsts = { path = "../dwconsts" }
itertools = "*"
num = "*"
hdf5 = { package = "hdf5-metno", version = "0.9" }
ndarray_crate = { package = "ndarray", version = "0.15.6" }
rayon = "*"
