[package]
name = "pwbasis"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattice = { path = "../lattice" }
gvector = { path = "../gvector" }
utility = { path = "../utility" }
vector3 = { path = "../vector3" }
hdf5 = { package = "hdf5-metno", version = "0.9" }
