[package]
name = "rgtransform"
version = "0.1.0"
authors = ["Junwen Li <junwen.li@dftworks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dwfft3d = { path = "../dwfft3d" }
gvector = { path = "../gvector" }
ndarray = { path = "../ndarray" }
pwdensity = { path = "../pwdensity" }
types = { path = "../types" }
utility = { path = "../utility" }
